--- a/uefi_loader/Cargo.toml
+++ b/uefi_loader/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-goblin = { version = "0.9.3", features = ["elf64"] }
+goblin = { version = "0.9.3", features = ["elf32", "elf64", "endian_fd"], default-features = false }
 log = "0.4.27"
 uefi = { version = "0.35.0", features = ["logger", "panic_handler"] }
