--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-x86_64 = { workspace = true }
+x86_64 = { workspace = true, features = ["instructions"] }
