--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2024"
 
 [dependencies]
 x86_64 = { workspace = true, features = ["instructions"] }
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
