--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -8,6 +8,14 @@ x86_64 = { workspace = true, features = ["instructions"] }
 
 [profile.dev]
 panic = "abort"
+debug = false
+lto = true
+codegen-units = 1
+opt-level = "z"
 
 [profile.release]
 panic = "abort"
+debug = false
+lto = true
+codegen-units = 1
+opt-level = "z"
