--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cd kernel && cargo build --verbose
+      run: cd kernel && rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu && cargo build --verbose
